rename header height variable with correct name, give project page content an explicit height or overflow-y:scroll will not work ( except on chrome )

--- a/src/styles/ProjectPage.css
+++ b/src/styles/ProjectPage.css
@@ -15,6 +15,7 @@
     width: 0; /* hack - flexbox will give it min-width */
     overflow-y: hidden;
     overflow-x: hidden;
+    height: calc(100vh - var(--GlobalNav-height-chrome));
   }
 
   &-constructs {
